project/stage/parse_tests/tests/reject/bad_statements/bad_if_else/lone_else_within_if.ul
int [0009] f() {
    if (1) {
        else {}
    }
}
